// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthHeader tests should not render subtitle if not passed 1`] = `
<div
  class="MuiBox-root css-jwp3xc"
  data-testid="auth-header-container-40374529-6e2c-49d8-81d7-93f01603a648"
>
  <div
    class="MuiBox-root css-1vd84sn"
  >
    <img
      alt="Logo"
      data-testid="auth-header-logo-40374529-6e2c-49d8-81d7-93f01603a648"
      src="/njila-logo-dark.svg"
      style="max-width: 60%; margin: 5% 10%;"
    />
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-294e0o-MuiTypography-root"
    data-testid="auth-header-title-40374529-6e2c-49d8-81d7-93f01603a648"
  >
    Only title
  </h4>
</div>
`;

exports[`AuthHeader tests should render the AuthHeader 1`] = `
<div
  class="MuiBox-root css-jwp3xc"
  data-testid="auth-header-container-40374529-6e2c-49d8-81d7-93f01603a648"
>
  <div
    class="MuiBox-root css-1vd84sn"
  >
    <img
      alt="Logo"
      data-testid="auth-header-logo-40374529-6e2c-49d8-81d7-93f01603a648"
      src="/njila-logo-dark.svg"
      style="max-width: 60%; margin: 5% 10%;"
    />
  </div>
  <h4
    class="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-294e0o-MuiTypography-root"
    data-testid="auth-header-title-40374529-6e2c-49d8-81d7-93f01603a648"
  >
    Test title
  </h4>
  <div
    class="MuiBox-root css-0"
    data-testid="auth-header-title=40374529-6e2c-49d8-81d7-93f01603a648"
  >
    <span>
      Test subtitle
    </span>
  </div>
</div>
`;
